--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <p style="text-align:center">
                 <name>Athul Paul Jacob</name>
               </p>
-              <p>I am a first-year Ph.D. student in AI, NLP and, cognitive science at <a href="https://www.csail.mit.edu/">MIT CSAIL</a>, advised by <a href="http://web.mit.edu/jda/www/">Jacob Andreas</a> and <a href="https://www.csail.mit.edu/">Joshua Tenenbaum</a>.</p>
+              <p>I am a first-year Ph.D. student in AI, NLP and, cognitive science at <a href="https://www.csail.mit.edu/">MIT CSAIL</a>, advised by <a href="http://web.mit.edu/jda/www/">Jacob Andreas</a> and <a href="http://web.mit.edu/cocosci/josh.html">Joshua Tenenbaum</a>.</p>
 
               <p>In 2019, I completed my bachelors in computer science, combinatorics and optimization at the <a href="https://uwaterloo.ca/">University of Waterloo</a>, where I was advised by <a href="https://vectorinstitute.ai/team/pascal-poupart/">Pascal Poupart</a>. From 2016 until 2018, I was also a visiting student researcher at <a href="https://mila.quebec/">Mila</a> where I worked under the supervision of <a href="https://mila.quebec/en/yoshua-bengio/">Yoshua Bengio</a>. 
               </p>
@@ -36,7 +36,7 @@
                 <a href="mailto:apjacob@mit.edu">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.ca/citations?user=XT3E7RoAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="http://www.linkedin.com/in/apjacob/"> LinkedIn </a> &nbsp/&nbsp
-                <a href="https://www.twitter.com/apjacob03"> Twitter </a>
+                <!-- <a href="https://www.twitter.com/apjacob03"> Twitter </a> -->
               </p>
             </td>
           </tr>
