--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
           <!-- <hr/> -->
           <tr>
             <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2104.07219">
+                <papertitle>Multitasking Inhibits Semantic Drift</papertitle>
+              </a>
+              <br>
+              <strong>Athul Paul Jacob</strong>,
+              <a href="https://ai.facebook.com/people/mike-lewis/">Mike Lewis</a>,
+              <a href="https://www.mit.edu/~jda/">Jacob Andreas</a>
+              <br>
+              <em>North American Chapter of the Association for Computational Linguistics (NAACL)</em>, 2021 &nbsp <font color="red"></font>
+              <br>
+              <p></p>
+              <p>We prove that multitask training eliminates semantic drift in a well-studied family of signaling games, and show that multitask training of neural latent language policies (LLPs) in a complex strategy game reduces drift and while improving sample efficiency. </p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/1806.04168">
                 <papertitle>Straight to the Tree: Constituency Parsing with Neural Syntactic Distance</papertitle>
               </a>
