--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <p style="text-align:center">
                 <a href="mailto:apjacob@mit.edu">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.ca/citations?user=XT3E7RoAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
-                <a href="http://www.linkedin.com/in/apjacob/"> LinkedIn </a>
+                <a href="http://www.linkedin.com/in/apjacob/"> LinkedIn </a> &nbsp/&nbsp
                 <a href="https://www.twitter.com/apjacob03"> Twitter </a>
               </p>
             </td>
