--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               <p style="text-align:center">
                 <name>Athul Paul Jacob</name>
               </p>
-              <p>I am a third-year Ph.D. student in AI, NLP and, cognitive science at <a href="https://www.csail.mit.edu/">MIT CSAIL</a>, advised by <a href="http://web.mit.edu/jda/www/">Jacob Andreas</a>.
-              <p>In 2019, I completed my bachelors in computer science, combinatorics and optimization at the <a href="https://uwaterloo.ca/">University of Waterloo</a>, where I was advised by <a href="https://vectorinstitute.ai/team/pascal-poupart/">Pascal Poupart</a>. From 2016 until 2018, I was also a visiting student researcher at <a href="https://mila.quebec/">Mila</a> where I worked under the supervision of <a href="https://mila.quebec/en/yoshua-bengio/">Yoshua Bengio</a>.</p>
+              <p>I am a third-year Ph.D. student in AI, NLP and, cognitive science at <a href="https://www.csail.mit.edu/">MIT CSAIL</a>, advised by <a href="http://web.mit.edu/jda/www/">Jacob Andreas</a>. I received my master's degree from <a href="https://www.csail.mit.edu/">MIT EECS</a> in 2022, where my thesis was co-advised by <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a> and <a href="http://web.mit.edu/jda/www/">Jacob Andreas</a>.
+              <p>In 2019, I completed my bachelor's in computer science, combinatorics and optimization at the <a href="https://uwaterloo.ca/">University of Waterloo</a>, where I was advised by <a href="https://vectorinstitute.ai/team/pascal-poupart/">Pascal Poupart</a>. From 2016 until 2018, I was also a visiting student researcher at <a href="https://mila.quebec/">Mila</a> where I worked under the supervision of <a href="https://mila.quebec/en/yoshua-bengio/">Yoshua Bengio</a>.</p>
               <p>I have been fortunate to intern at <a href="https://ai.facebook.com/">Facebook AI Research</a> several times in 2018, 2020 and 2021 as a researcher, where I was mentored by <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a>, <a href="http://www.kyunghyuncho.me/">Kyunghyun Cho</a> and <a href="https://ai.facebook.com/people/mike-lewis/">Mike Lewis</a>. I have also previously worked as a research intern at <a href="https://www.microsoft.com/en-us/research/">Microsoft Research</a> in fall 2017 and winter 2018 with <a href="https://www.microsoft.com/en-us/research/people/alsordon/">Alessandro Sordoni</a> and <a href="https://www.microsoft.com/en-us/research/people/adtrisch/">Adam Trischler</a>.</p>
 
               <p style="text-align:center">
@@ -69,8 +69,11 @@
               <a>Anton Bakhtin</a>,
               <a href="https://www.mit.edu/~jda/">Jacob Andreas</a>,
               <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a>
+
               <br>
-              <em>arXiv Pre-print</em>, 2021 &nbsp <font color="red"></font>
+              <em>ICLR Workshop on Gamification and Multiagent Solutions</em>, 2022 &nbsp <font color="red"><strong>(Contributed Talk)</strong></font>
+              <br>
+              <em>International Conference on Machine Learning (ICML)</em>, 2022 &nbsp <font color="red"><strong>(Spotlight Presentation)</strong></font>
               <br>
               <p></p>
               <p>We show that by regularizing search towards a human policy, we get state-of-the-art human prediction accuracies in chess, Go and no-press Diplomacy while being significantly stronger. </p>
