--- a/index.html
+++ b/index.html
@@ -55,6 +55,26 @@
         </tbody></table> -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr><td style="padding:20px;width:75%;vertical-align:middle"><heading>Publications</heading><p>* indicates equal first author contributions</p></td></tr>
+          <tr>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2210.05492">
+                <papertitle>Mastering the Game of No-Press Diplomacy via Human-Regularized Reinforcement Learning and Planning</papertitle>
+              </a>
+              <br>
+              <a>Anton Bakhtin*</a>,		
+              <a>David Wu*</a>,
+              <a href="https://scholar.google.com/citations?hl=en&user=Ad6O4-0AAAAJ">Adam Lerer*</a>,
+              <a>Jonathan Gray*</a>,
+              <strong>Athul Paul Jacob*</strong>,
+              <a href="https://www.cs.cmu.edu/~gfarina/about/">Gabriele Farina*</a>,
+              <a>Alexander H Miller</a>,
+              <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a>
+              <p></p>
+              <p>We introduce Diplodocus, an AI that achieves expert human-level performance in No-press Diplomacy, a challenging 7-player strategy game that involves both cooperation and competition. </p>
+            </td>
+          </tr>
+
           <!-- <hr/> -->
           <tr>
             <td style="padding:20px;width:75%;vertical-align:middle">
