--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
               <a href="https://www.cs.cmu.edu/~gfarina/about/">Gabriele Farina*</a>,
               <a>Alexander H Miller</a>,
               <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a>
+
+              <br>
+              <em>NeurIPS Deep Reinforcement Learning Workshop</em>, 2022 &nbsp <font color="red"><strong>(Spotlight Talk)</strong></font>
+              <br>
+
               <p></p>
               <p>We introduce Diplodocus, an AI that achieves expert human-level performance in No-press Diplomacy, a challenging 7-player strategy game that involves both cooperation and competition. </p>
             </td>
