--- a/index.html
+++ b/index.html
@@ -58,6 +58,25 @@
         <tr><td style="padding:20px;width:75%;vertical-align:middle"><heading>Publications</heading><p>* indicates equal first author contributions</p></td></tr>
           <tr>
             <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="XXX">
+                <papertitle>Human-Level Play in the Game of Diplomacy by Combining Language Models with Strategic Reasoning</papertitle>
+              </a>
+              <br>
+              <a>FAIR, Anton Bakhtin* , Noam Brown*, Emily Dinan*, Gabriele Farina, Colin Flaherty*, Daniel Fried, Andrew Goff, Jonathan Gray*, Hengyuan Hu*</a>,
+              <strong>Athul Paul Jacob*</strong>,
+              <a>Mojtaba Komeili, Karthik Konath, Minae Kwon, Adam Lerer*, Mike Lewis*, Alexander H. Miller*, Sasha Mitts, Adithya Renduchintala*, Stephen Roller, Dirk Rowe, Weiyan Shi*, Joe Spisak, Alexander Wei, David Wu*, Hugh Zhang*, Markus Zijlstra</a>,		
+
+              <br>
+              <em>Science Magazine</em>, November 22, 2022 &nbsp <font color="red"></font>
+              <br>
+
+              <p></p>
+              <p>We introduce Cicero, an AI agent that demonstrates human-level performance in the mixed-motive 7-player strategic board game Diplomacy that involves natural language negotiation, strategic coordination and persuation. </p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2210.05492">
                 <papertitle>Mastering the Game of No-Press Diplomacy via Human-Regularized Reinforcement Learning and Planning</papertitle>
               </a>
