--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <p style="text-align:center">
                 <name>Athul Paul Jacob</name>
               </p>
-              <p>I am a third-year Ph.D. student in AI, NLP and, cognitive science at <a href="https://www.csail.mit.edu/">MIT CSAIL</a>, advised by <a href="http://web.mit.edu/jda/www/">Jacob Andreas</a>. I received my master's degree from <a href="https://www.csail.mit.edu/">MIT EECS</a> in 2022, where my thesis was co-advised by <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a> and <a href="http://web.mit.edu/jda/www/">Jacob Andreas</a>.
+              <p>I am a Ph.D. student in AI, multi-agent systems and, NLP at <a href="https://www.csail.mit.edu/">MIT CSAIL</a>, advised by <a href="http://web.mit.edu/jda/www/">Jacob Andreas</a>. I received my master's degree from <a href="https://www.csail.mit.edu/">MIT EECS</a> in 2022, where my thesis was co-advised by <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a> and <a href="http://web.mit.edu/jda/www/">Jacob Andreas</a>.
               <p>In 2019, I completed my bachelor's in computer science, combinatorics and optimization at the <a href="https://uwaterloo.ca/">University of Waterloo</a>, where I was advised by <a href="https://vectorinstitute.ai/team/pascal-poupart/">Pascal Poupart</a>. From 2016 until 2018, I was also a visiting student researcher at <a href="https://mila.quebec/">Mila</a> where I worked under the supervision of <a href="https://mila.quebec/en/yoshua-bengio/">Yoshua Bengio</a>.</p>
               <p>I have been fortunate to intern at <a href="https://ai.facebook.com/">Facebook AI Research</a> several times in 2018, 2020 and 2021 as a researcher, where I was mentored by <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a>, <a href="http://www.kyunghyuncho.me/">Kyunghyun Cho</a> and <a href="https://ai.facebook.com/people/mike-lewis/">Mike Lewis</a>. I have also previously worked as a research intern at <a href="https://www.microsoft.com/en-us/research/">Microsoft Research</a> in fall 2017 and winter 2018 with <a href="https://www.microsoft.com/en-us/research/people/alsordon/">Alessandro Sordoni</a> and <a href="https://www.microsoft.com/en-us/research/people/adtrisch/">Adam Trischler</a>.</p>
 
@@ -58,7 +58,7 @@
         <tr><td style="padding:20px;width:75%;vertical-align:middle"><heading>Publications</heading><p>* indicates equal first author contributions</p></td></tr>
           <tr>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="XXX">
+              <a href="https://www.science.org/doi/10.1126/science.ade9097">
                 <papertitle>Human-Level Play in the Game of Diplomacy by Combining Language Models with Strategic Reasoning</papertitle>
               </a>
               <br>
@@ -96,6 +96,29 @@
 
               <p></p>
               <p>We introduce Diplodocus, an AI that achieves expert human-level performance in No-press Diplomacy, a challenging 7-player strategy game that involves both cooperation and competition. </p>
+            </td>
+          </tr>
+
+
+          <tr>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2211.12615">
+                <papertitle>AutoReply: Detecting Nonsense in Dialogue Introspectively with Discriminative Replies</papertitle>
+              </a>
+              <br>
+              <a>Weiyan Shi</a>,		
+              <a>Emily Dinan</a>,
+              <a>Adi Renduchintala</a>,
+              <a>Daniel Fried</a>,
+              <strong>Athul Paul Jacob</strong>,
+              <a>Zhou Yu</a>,
+              <a>Mike Lewis</a>,
+              <br>
+              <em>Arxiv, 2022</em>
+              <br>
+
+              <p></p>
+              <p>A new algorithm for detecting nonsensical responses in complex applications involving dialogues. </p>
             </td>
           </tr>
 
