--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
               <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a>
 
               <br>
+              <em>International Conference on Learning Representations (ICLR)</em>, 2023 &nbsp <font color="red"><strong>(Notable - Top 5%)</strong></font>
+              <br> 
               <em>NeurIPS Deep Reinforcement Learning Workshop</em>, 2022 &nbsp <font color="red"><strong>(Spotlight Talk)</strong></font>
               <br>
 
