--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <br>
               <a>FAIR, Anton Bakhtin* , Noam Brown*, Emily Dinan*, Gabriele Farina, Colin Flaherty*, Daniel Fried, Andrew Goff, Jonathan Gray*, Hengyuan Hu*</a>,
               <strong>Athul Paul Jacob*</strong>,
-              <a>Mojtaba Komeili, Karthik Konath, Minae Kwon, Adam Lerer*, Mike Lewis*, Alexander H. Miller*, Sasha Mitts, Adithya Renduchintala*, Stephen Roller, Dirk Rowe, Weiyan Shi*, Joe Spisak, Alexander Wei, David Wu*, Hugh Zhang*, Markus Zijlstra</a>,		
+              <a>Mojtaba Komeili, Karthik Konath, Minae Kwon, Adam Lerer*, Mike Lewis*, Alexander H. Miller*, Sasha Mitts, Adithya Renduchintala*, Stephen Roller, Dirk Rowe, Weiyan Shi*, Joe Spisak, Alexander Wei, David Wu*, Hugh Zhang*, Markus Zijlstra</a>,
 
               <br>
               <em>Science Magazine</em>, November 22, 2022 &nbsp <font color="red"></font>
@@ -81,7 +81,7 @@
                 <papertitle>Mastering the Game of No-Press Diplomacy via Human-Regularized Reinforcement Learning and Planning</papertitle>
               </a>
               <br>
-              <a>Anton Bakhtin*</a>,		
+              <a>Anton Bakhtin*</a>,
               <a>David Wu*</a>,
               <a href="https://scholar.google.com/citations?hl=en&user=Ad6O4-0AAAAJ">Adam Lerer*</a>,
               <a>Jonathan Gray*</a>,
@@ -91,8 +91,8 @@
               <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a>
 
               <br>
-              <em>International Conference on Learning Representations (ICLR)</em>, 2023 &nbsp <font color="red"><strong>(Notable - Top 5%)</strong></font>
-              <br> 
+            <em>International Conference on Learning Representations (ICLR)</em>, 2023 &nbsp <font color="red"><strong> (Outstanding Paper Honorable Mention) </strong></font>
+              <br>
               <em>NeurIPS Deep Reinforcement Learning Workshop</em>, 2022 &nbsp <font color="red"><strong>(Spotlight Talk)</strong></font>
               <br>
 
@@ -108,7 +108,7 @@
                 <papertitle>AutoReply: Detecting Nonsense in Dialogue Introspectively with Discriminative Replies</papertitle>
               </a>
               <br>
-              <a>Weiyan Shi</a>,		
+              <a>Weiyan Shi</a>,
               <a>Emily Dinan</a>,
               <a>Adi Renduchintala</a>,
               <a>Daniel Fried</a>,
