--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
   		 <tr>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/2310.09139">
+              <a href="https://apjacob.me/assets/consensus.pdf">
                 <papertitle>The Consensus Game: Language Model Generation via Equilibrium Search</papertitle>
               </a>
               <br>
