--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
         
   		 <tr>
             <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://apjacob.me/assets/reco.pdf">
+                <papertitle>Regularized Conventions: Equilibrium Computation as a Model of Pragmatic Reasoning</papertitle>
+              </a>
+              <br>
+              <strong>Athul Paul Jacob</strong>,
+              <a>Gabriele Farina</a>,
+              <a>Jacob Andreas</a>
+              <br>
+              <em>Arxiv</em>, 2023
+              <br>
+              <p></p>
+              <p> We present a model of pragmatic language understanding called ReCo, where utterances are produced and understood by searching for regularized equilibria of signaling game. Across several datasets capturing real and idealized human judgments about pragmatic implicatures, ReCo matches or improves upon predictions made by best response and rational speech act models of language understanding</p>
+            </td>
+          </tr>
+
+  		 <tr>
+            <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://apjacob.me/assets/consensus.pdf">
                 <papertitle>The Consensus Game: Language Model Generation via Equilibrium Search</papertitle>
               </a>
