--- a/index.html
+++ b/index.html
@@ -56,7 +56,24 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr><td style="padding:20px;width:75%;vertical-align:middle"><heading>Publications</heading><p>* indicates equal first author contributions</p></td></tr>
-        
+         
+  		 <tr>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/pdf/2312.04030.pdf">
+                <papertitle>Modeling Boundedly Rational Agents with Latent Inference Budgets</papertitle>
+              </a>
+              <br>
+              <strong>Athul Paul Jacob</strong>,
+              <a>Abhishek Gupta</a>,
+              <a>Jacob Andreas</a>
+              <br>
+              <em>NeurIPS Generalization in Planning Workshop </em>, 2023
+              <br>
+              <p></p>
+              <p> We study the problem of modeling a population of agents pursuing unknown goals subject to unknown computational constraints. We introduce latent inference budget model (L-IBM) that models agents’ computational constraints explicitly, via a latent variable (inferred jointly with a model of agents’ goals) that controls the runtime of an iterative inference algorithm. In three modeling tasks—inferring navigation goals from routes, inferring communicative intents from human utterances, and predicting next moves in human chess games—we show that L-IBMs match or outperform Boltzmann models of decision-making under uncertainty</p>
+            </td>
+          </tr>
+
   		 <tr>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://apjacob.me/assets/reco.pdf">
@@ -85,7 +102,7 @@
               <a>Gabriele Farina</a>,
               <a>Jacob Andreas</a>
               <br>
-              <em>Arxiv</em>, 2023
+              <em>NeurIPS Workshop on robustness of zero/few-shot learning in foundation models (R0-FoMo) </em>, 2023 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
               <br>
               <p></p>
               <p> We introduce a training-free, game-theoretic procedure for language model decoding that improves performance across a number of NLP tasks.</p>
