--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <a>Gabriele Farina</a>,
               <a>Jacob Andreas</a>
               <br>
-              <em>NeurIPS Workshop on robustness of zero/few-shot learning in foundation models (R0-FoMo) </em>, 2023 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+              <em>NeurIPS Workshop on robustness of zero/few-shot learning in foundation models (R0-FoMo) </em>, 2023 &nbsp <font color="red"><strong>(Best Paper)</strong></font>
               <br>
               <p></p>
               <p> We introduce a training-free, game-theoretic procedure for language model decoding that improves performance across a number of NLP tasks.</p>
