--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
               <a>Abhishek Gupta</a>,
               <a>Jacob Andreas</a>
               <br>
+              <em>International Conference on Learning Representations (ICLR)</em>, 2024
+              <br>
               <em>NeurIPS Generalization in Planning Workshop </em>, 2023
               <br>
               <p></p>
@@ -101,6 +103,8 @@
               <a>Yikang Shen</a>,
               <a>Gabriele Farina</a>,
               <a>Jacob Andreas</a>
+              <br>
+              <em>International Conference on Learning Representations (ICLR)</em>, 2024 &nbsp <font color="red"><strong> (Spotlight Presentation) </strong></font>
               <br>
               <em>NeurIPS Workshop on robustness of zero/few-shot learning in foundation models (R0-FoMo) </em>, 2023 &nbsp <font color="red"><strong>(Best Paper)</strong></font>
               <br>
@@ -144,7 +148,7 @@
               <a href="https://www.cs.cmu.edu/~noamb/">Noam Brown</a>
 
               <br>
-            <em>International Conference on Learning Representations (ICLR)</em>, 2023 &nbsp <font color="red"><strong> (Outstanding Paper Honorable Mention) </strong></font>
+              <em>International Conference on Learning Representations (ICLR)</em>, 2023 &nbsp <font color="red"><strong> (Outstanding Paper Honorable Mention) </strong></font>
               <br>
               <em>NeurIPS Deep Reinforcement Learning Workshop</em>, 2022 &nbsp <font color="red"><strong>(Spotlight Talk)</strong></font>
               <br>
